--- a/web/web/public/index.html
+++ b/web/web/public/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>ToDo - Organizando a Sua Vida</title>
-  
+  <link rel="icon" type="image/png" href="logo.png">
   <style>
     * {
       padding: 0;
